# tele_adora

./: .gitignore  CHMOD_SHARING_EXPLANATION.md  DEVICE_CONFIG_GUIDE.md  DEVICE_CONFIG_IMPLEMENTATION_REPORT.md  OPTIMIZATION_NOTES.md  PERMISSIONS_SETUP.md  QUICK_PERMISSIONS.md  QUICK_START.md  QUICK_START_OLD.md  SERVICE_MANAGEMENT_GUIDE.md  TERMINAL_MODE_GUIDE.md  service_manager.sh  setup_keyboard.sh  setup_keyservice.sh  setup_permissions.sh  setup_step.bash  setup_vrservice.sh  start.sh  stop.sh  test_env_fix.sh  test_launch_fix.sh  test_service_manager.sh
config/: device_mapping.txt
dev/: readme.md
leader/key_board/: .gitignore  readme.md  start_full_teleop.sh  test_chassis_control.py  test_head_control.py  test_suction_pump.py  云台和底盘控制说明.md  云台控制说明.md  新键盘布局设计.md  键位对照表.md
leader/key_board/src/my_teleop_pkg/: README_lifting_control.md  package.xml  setup.cfg  setup.py
leader/key_board/src/my_teleop_pkg/my_teleop_pkg/: SuctionPumpController.py  bimanual_teleop.py  dual_hand_teleop.py  teleop_node.py
script/: README.md  demo_device_config.sh  device_identification.sh  fix_dbus.sh  load_device_config.sh  main_setup.sh  setup_keyboard.sh  setup_keyservice.sh  setup_step.bash  setup_vrservice.sh  setup_vrservice_backup.sh  test_auto_permissions.sh  test_chmod_sharing.sh  test_confirm.sh  test_device_config.sh  test_permissions.sh  test_start_menu.sh  test_terminal_params.sh  test_vr_init.sh
slave/VR_service/script/: init.sh  version_check.sh
slave/VR_service/src/head_servo_controller/: package.xml  setup.cfg  setup.py
slave/VR_service/src/head_servo_controller/head_servo_controller/: head_servo_node.py
slave/VR_service/src/vr_arm_sync/: PROJECT_SUMMARY.md  README.md  package.xml  setup.cfg  setup.py
slave/VR_service/src/vr_arm_sync/launch/: vr_arm_sync.launch.py
slave/VR_service/src/vr_arm_sync/vr_arm_sync/: vr_arm_sync_node.py
slave/adora/: usb2serial.md
slave/adora/adora_chassis_control/: README.md
slave/adora/adora_chassis_control/adora_chassis_bringup/: CMakeLists.txt  package.xml
slave/adora/adora_chassis_control/adora_chassis_bringup/include/: binary.h  dt_control.hpp  ros_dt_msg.h
slave/adora/adora_chassis_control/adora_chassis_bringup/launch/: adora_a2_max_ros2.launch.py  adora_a2_mini_ros2.launch.py
slave/adora/adora_chassis_control/adora_chassis_bringup/src/: adora_a2_max_control.cpp  adora_a2_max_ros2_node.cpp  adora_chassis_bringup_V1.cpp  adora_chassis_bringup_V2.cpp
slave/adora/adora_chassis_control/adora_msgs/: CMakeLists.txt  package.xml
slave/adora/adora_chassis_control/adora_msgs/msg/: AckermannCurrent.msg  AckermannSpeed.msg  AutoCharge.msg  BatteryState.msg  ChassisDate.msg  ChassisParameter.msg  ChassisState.msg  ChassisVelocity.msg  Control1.msg  DriveHollysysError.msg  DriveSdfzError.msg  Dt1.msg  Dt2.msg  FourWheelDiffCurrent.msg  FourWheelDiffSpeed.msg  FourWheelSteerAngle.msg  FourWheelSteerCurrent.msg  FourWheelSteerEncoder.msg  FourWheelSteerMotion.msg  FourWheelSteerSpeed.msg  Frame.msg  HardwareVersion.msg  LedStrip.msg  LedStrips.msg  RemoteControl.msg  SoftwareVersion.msg  TwoWheelDiffCurrent.msg  TwoWheelDiffSpeed.msg
slave/adora/adora_lifting_motor_control/: CMakeLists.txt  README.md  package.xml
slave/adora/adora_lifting_motor_control/launch/: adora_a2_max_ros2_node.py  adora_a2_pro_ros2_node.py
slave/adora/adora_lifting_motor_control/src/: serialliftingmotor.cpp
slave/adora/adora_suction_pump_control/: README.md  package.xml  setup.cfg  setup.py
slave/adora/adora_suction_pump_control/adora_suction_pump_control/: suction_pump_node.py
slave/adora/adora_suction_pump_control/launch/: suction_pump_control.launch.py
slave/adora/ros2_head_control/: head_calibration_test.py  head_zero_calibration.py
slave/adora/ros2_head_control/config/: head_zero_config.txt
slave/adora/ros2_head_control/src/ros2_head_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
slave/adora/ros2_head_control/src/ros2_head_control/launch/: head_control.launch.py
slave/adora/ros2_head_control/src/ros2_head_control/msg/: MotorStatus.msg
slave/adora/ros2_head_control/src/ros2_head_control/ros2_head_control/: MOTOR_MG4010E.py  head_control_node.py  motor_status_node.py
slave/key_service/arm_service/: readme.md
slave/key_service/arm_service/script/: init.sh
slave/key_service/arm_service/script/version/: can0.py  can1.py
slave/key_service/arm_service/src/arm_service/: package.xml  setup.cfg  setup.py
slave/key_service/arm_service/src/arm_service/arm_service/: sub.py
slave/key_service/arm_service/test/: ctri.py  disable.py  enable.py  reset.py
slave/video/webrtc_pub/: README_NEW.md  RGB_STREAM_CONFIG.md  USER_GUIDE.md  start_multi_camera.sh  start_single_camera.sh
slave/video/webrtc_pub/src/webrtc_pub/: package.xml  setup.cfg  setup.py
slave/video/webrtc_pub/src/webrtc_pub/launch/: configurable_multi_camera_stream.launch.py  http_camera_stream.launch.py  specified_multi_camera.launch.py
slave/video/webrtc_pub/src/webrtc_pub/webrtc_pub/: http_camera_node.py
slave/video/webrtc_pub/web/: README.md  camera_viewer.html  camera_webrtc_final.py  debug_webrtc.html  debug_webrtc.py  fixed_signaling_server.py  fixed_webrtc.py  local_test_viewer.html  simple_webrtc_test.py  static_video_test.py  static_video_test_fixed.py  video_only_stream.py  video_only_viewer.html  webrtc_debug.html
test/: head.py
