<?xml version="1.0"?>
<package format="3">
  <name>adora_chassis_bringup</name>
  <version>0.0.0</version>
  <description>ROS2 package using serial library</description>
  <maintainer email="cenruping@vip.qq.com">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>nav_msgs</build_depend>  
  <build_depend>adora_msgs</build_depend>  

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>adora_msgs</exec_depend>
  
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

